--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ jobs:
     steps:
       - name: Install Hugo CLI
         run: sudo apt-get install -y hugo
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
       
       - name: Build Hugo
         run: |
