--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo -t hello-friend-ng
+        run: hugo -t ./hello-friend-ng
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
