--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           pwd
           ls -la
-          hugo -t ./hello-friend-ng
+          hugo -t hello-friend-ng
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
