--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "https://namberino.github.io/"
 title = "Nam's Journal"
 languageCode = 'en-us'
-theme = "./themes/hello-friend-ng"
+theme = "hello-friend-ng"
 
 defaultContentLanguage = 'en'
 #defaultContentLanguageInSubdir = true
