--- a/hugo.toml
+++ b/hugo.toml
@@ -83,7 +83,7 @@ rssLimit  = 10  # Maximum number of items in the RSS feed.
     url        = "posts/"
 
     [languages.en.params.logo]
-      logoText = "nam$journal"
+      logoText = "nam@journal"
       logoHomeLink = "/"
     # or
     #
