--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build website
         run: |
-          apt install hugo
+          sudo apt install hugo
           hugo build
       - name: Setup Pages
         uses: actions/configure-pages@v5
