--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build website
         run: |
           sudo apt install hugo
-          hugo build
+          hugo --minify
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
