--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: '0.148.2'
       - name: Build website
-        run: |
-          sudo apt install hugo
-          hugo --minify
+        run: hugo --minify
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
