--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: '0.148.2'
+          extended: true
       - name: Build website
         run: hugo --minify
       - name: Setup Pages
