--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,6 @@ Temporary Items
 # Ignore all local history of files
 .history
 .ionide
+public
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,hugo
